--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "^5.0.0",
+    "@adiwajshing/baileys": "^4.4.0",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@hapi/boom": "^9.1.4",
     "@sentry/node": "^6.18.1",
+    "@whiskeysockets/baileys": "^6.4.0",
+    "add": "^2.0.6",
     "bcryptjs": "^2.4.3",
     "bull": "^4.1.0",
     "cookie-parser": "^1.4.6",
@@ -32,8 +34,10 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
+    "fs": "^0.0.1-security",
     "gn-api-sdk-typescript": "^1.0.7",
     "http-graceful-shutdown": "^3.1.6",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "mustache": "^4.2.0",
@@ -48,7 +52,7 @@
     "sequelize": "^5.22.3",
     "sequelize-cli": "^5.5.1",
     "sequelize-typescript": "^1.1.0",
-    "socket.io": "^3.0.5",
+    "socket.io": "^4.7.1",
     "uuid": "^8.3.2",
     "xlsx": "^0.18.3",
     "yup": "^0.32.11"
